# pg-modal

./: .gitignore  LICENSE  README.md  pyproject.toml
scripts/: 001-calc-square.sh  002-calc-attention-on-gpu.py  002-calc-attention-on-gpu.sh  003-chat-with-pdf-vision.py  003-chat-with-pdf-vision.sh
