[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pg-modal"
description = "My package description"
readme = "README.md"
authors = [
    {name = "wattai", email = "evamark.wattai@gmail.com"}
]
license = {file = "LICENSE"}
version = "0.1.0"
classifiers = [
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.11.0"
dependencies = [
    "modal"
]
[tool.setuptools]
packages = ["foo"]
package-dir = {"" = "src"}

[project.optional-dependencies]
dev = [
    "ruff",
    "pre-commit",
]
